// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@createItem creates item 1`] = `
Object {
  "booleanProperty": false,
  "id": "1",
  "numberProperty": 1,
  "stringProperty": "foo",
}
`;

exports[`@createItem creates item when envelope is enabled 1`] = `
Object {
  "body": Object {
    "booleanProperty": false,
    "id": "1",
    "numberProperty": 1,
    "stringProperty": "foo",
  },
  "headers": Object {
    "x-powered-by": "Express",
  },
  "status": 201,
}
`;
